--- a/main.html
+++ b/main.html
@@ -7,9 +7,53 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<form method="post">
+		<div>
+		<label for=name>Name:</label>
+		<input type = "text" id="name"  placeholder="name" required>
+		</div><br>
+		<div>
+		<label for=email>Email:</label>
+		<input type = "email" id="email" placeholder="email" required>
+		</div><br>
+		<div>
+		<label for=gender>Gender:</label>
+		<input type=radio id=gender name=gender>Male
+		<input type=radio id=gender name=gender>Female
+		</div><br>
+		<div>
+			<label for="carbrands">Car Brands:</label>
+			<select>
+			<option value="" disabled selected>--Please choose an option--</option>
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+			</select>
+		</div><br>
+		<div>
+			<label for="age">Age:</label>
+			<input type="number" id="age" name="name" required>
+		</div><br>
+		<div>
+			<label for="dob">DOB:</label>
+			<input type="date" id="dob" name="dob">
+		</div><br>
+		<div>
+			<label for="phonenumber">Phone Number:</label>
+			<input type="tel" id="phonenumber" name="phonenumber" placeholder="xxx-xxx-xxxx">
+		</div><br>
+		<div>
+			<label for="password">Password:</label>
+			<input type="password" id="password" name="password" required>
+		</div><br>
+		<div>
+			<input type="checkbox" required>I agree to the TOS
+		</div><br>
+		<div>
+			<button type="submit">Submit</button>
+		</div>
+		
+	</form>
 
 </body>
 
